simple-server-deployment.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START gke_manifests_helloweb_deployment_deployment_helloweb]
# [START container_helloapp_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server-deployment
  labels:
    app: simple-server
spec:
  replicas: 1
  # strategy:
    # type: RollingUpdate
    # rollingUpdate:
      # maxSurge: 1
      # maxUnavailable: 1
  selector:
    matchLabels:
      app: simple-server
      tier: web
  template:
    metadata:
      labels:
        app: simple-server
        tier: web
    spec:
      containers:
      - name: simple-server-app
        image: gcr.io/exercise-cluster/simple-server:v1
        imagePullPolicy: Always
        # envFrom:
        #   - configMapRef:
        #       name: my-config   # Load all ConfigMap keys as environment variables
        #   - secretRef:
        #       name: my-secret   # Load all Secret keys as environment variables
        ports:
        - containerPort: 8080
        # resources:
        # limits:
        #   memory: "512Mi"
        #   cpu: "500m"
# [END container_helloapp_deployment]
# [END gke_manifests_helloweb_deployment_deployment_helloweb]
