elk-set.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.17.1
        ports:
        - containerPort: 5601 # Kibana UI Port
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
spec:
  selector:
    app: kibana
  ports:
  - name: http
    protocol: TCP
    port: 5601
    targetPort: 5601
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:7.17.1
        ports:
        - containerPort: 5044 # Beats input port
          name: beats
        - containerPort: 9600 # Logstash HTTP API port
          name: api
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/logstash/pipeline/
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: logstash-config
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elk
spec:
  type: ClusterIP
  ports:
  - name: beats
    port: 5044
    targetPort: 5044
  - name: http-input
    port: 8080
    targetPort: 8080
  - name: api
    port: 9600
    targetPort: 9600
  selector:
    app: logstash


# curl -XPOST "http://localhost:5044" -d '{"message": "Hello Logstash!"}'
